K8s/privileges.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
