K8s/backend-app-admin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app-admin-deploy
  namespace: dev
  labels:
    app: backend-app-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-app-admin
  template:
    metadata:
      labels:
        app: backend-app-admin
    spec:
      serviceAccountName: api-app-sa # --ServiceAccount name
      containers:
      - name: backend-app-admin
        image: sarathvedha/backend-admin-app:latest
        resources:
          requests:
            memory: "256Mi"
            cpu: "150m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 10
          periodSeconds: 3
          failureThreshold: 2
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 40
          timeoutSeconds: 5
          periodSeconds: 8
          failureThreshold: 1

---
apiVersion: v1
kind: Service
metadata:
  name: backend-app-admin-svc
  namespace: dev
  labels:
    app: backend-app-admin
    spring-boot: "true"
spec:
  selector:
    app: backend-app-admin
  ports:
  - port: 80
    targetPort: 80 #Pod or container port
  type: NodePort
