K8s/backend-app-gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app-gateway-deploy
  namespace: dev
  labels:
    app: backend-app-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-app-gateway
  template:
    metadata:
      labels:
        app: backend-app-gateway
    spec:
      serviceAccountName: api-app-sa # --ServiceAccount name
      containers:
      - name: backend-app-gateway
        image: sarathvedha/backend-gateway-app:latest
        resources:
          requests:
            memory: "200Mi"
            cpu: "50m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 40
          timeoutSeconds: 10
          periodSeconds: 3
          failureThreshold: 2
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 50
          timeoutSeconds: 10
          periodSeconds: 8
          failureThreshold: 1

---
apiVersion: v1
kind: Service
metadata:
  name: backend-app-gateway-svc
  namespace: dev
  labels:
    app: backend-app-gateway
    spring-boot: "true"
spec:
  selector:
    app: backend-app-gateway
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
