K8s/backend-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app-deploy
  namespace: dev
  labels:
    app: backend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      serviceAccountName: api-app-sa # --ServiceAccount name
      containers:
      - name: backend-app
        image: sarathvedha/backend-app:latest
        resources:
          requests:
            memory: "200Mi"
            cpu: "50m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 40
          timeoutSeconds: 10
          periodSeconds: 3
          failureThreshold: 2
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 50
          timeoutSeconds: 5
          periodSeconds: 8
          failureThreshold: 1

---
apiVersion: v1
kind: Service
metadata:
  name: backend-app-svc
  namespace: dev
  labels:
    app: backend-app
    spring-boot: "true"
spec:
  selector:
    app: backend-app
  ports:
  - port: 80
    targetPort: 80 #Pod or container port
  # type: LoadBalancer
