K8s/frontend-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app-deploy
  namespace: dev
  labels:
    app: frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      serviceAccountName: api-app-sa
      containers:
      - name: frontend-app
        image: sarathvedha/frontend-app:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 10
          periodSeconds: 3
          failureThreshold: 2
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 40
          timeoutSeconds: 5
          periodSeconds: 8
          failureThreshold: 1

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-app-svc
  namespace: dev
spec:
  selector:
    app: frontend-app
  ports:
  - port: 80
    targetPort: 80 #Pod or container port
  type: LoadBalancer
