K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  ingressClassName: nginx  # Assuming you're using Nginx ingress controller
  rules:
  - host: your-domain.com  # Replace with your actual domain
    http:
      paths:
      - path: /  # Matches the root path (/)
        backend:
          serviceName: frontend-app-svc
          servicePort: 80  # Replace with frontend service port
        annotations:
          nginx.ingress.kubernetes.io/rewrite-target: /app/$1
      - path: /api-generator(/|$)(.*)  # Matches paths starting with /backend
        backend:
          serviceName: backend-app-gateway-svc
          servicePort: 80  # Replace with backend service port
